opa/broken-policy/k8s-broken-policy-cons.yaml
# Enforce runAsNonRoot
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRunAsNonRoot
metadata:
  name: enforce-nonroot
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
